--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   #footer {
     margin-top: 5em;
     padding-left: 2em;
+    display: none;
   }
 </style>
 </head>
@@ -41,7 +42,7 @@
 
 <h1>modules in the sea</h1>
 
-<div id="content"></div>
+<div id="content">loading...</div>
 
 <div id="footer">
   <p>
@@ -100,6 +101,7 @@
     }
 
     document.getElementById('content').innerHTML = html;
+    document.getElementById('footer').style.display = 'block';
   });
 
 </script>
