--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
 <div id="footer">
   <p>
-    For more information, please visit
+    Visits
     <a href="https://github.com/seajs/modules/">https://github.com/seajs/modules/</a>
+    to obtain more modules.
   </p>
 </div>
 
