--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <p>
     Visits
     <a href="https://github.com/seajs/modules/">https://github.com/seajs/modules/</a>
-    to obtain more modules.
+    to obtain more information.
   </p>
 </div>
 
