--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 
   define('~/tests', function(require, exports) {
 
-    var test = require('../../seajs/test/test');
+    var test = require('http://seajs.com/test/test.js');
     var registry = require('./registry');
     var global = this;
 
