update seajs to 1.1.0

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 
 <div id="footer">
   <p>
-    Visits
+    For more information, please go to
     <a href="https://github.com/seajs/modules/">https://github.com/seajs/modules/</a>
-    to obtain more information.
   </p>
 </div>
 
@@ -74,7 +73,7 @@
   </dl>
 </script>
 
-<script src="seajs/1.0.2/sea.js"></script>
+<script src="seajs/1.1.0/sea.js"></script>
 <script>
 
   seajs.config({
