--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
 
     for (var p in registry) {
       if (registry.hasOwnProperty(p)) {
+
         var meta = registry[p];
-        var filename = (meta.filename || meta.name).toLowerCase();
+        var filename = meta.filename;
         var path = BASE + '/' + meta.name + '/' + meta.version + '/';
 
         meta.minfile = filename + '.js';
@@ -105,7 +106,6 @@
 
         // for seajs plugins
         if (meta.extra) {
-
           meta.extraFiles = meta.extra.map(function(filepath) {
             var filename = filepath.replace(/^.*\/(.*)$/, '$1');
             return {
