--- a/test.html
+++ b/test.html
@@ -26,8 +26,8 @@
   seajs.config({
     alias: {
       '~': location.href.replace(/(.*)\/.*/, '$1'),
-      'es5-safe': 'es5-safe/0.9.1/es5-safe',
-      'json': 'json/1.0.0/json'
+      'es5-safe': 'es5-safe/0.9.2/es5-safe',
+      'json': 'json/1.0.1/json'
     },
     preload: [
       Function.prototype.bind ? '' : 'es5-safe',
@@ -136,7 +136,7 @@
 
     tests.getTestItems().forEach(function(name) {
       var meta = tests.registry[name];
-      var filename = meta.filename || meta.name;
+      var filename = meta.filename;
       alias[name] = name + '/' + meta.version + '/' + filename;
     });
 
@@ -154,6 +154,5 @@
 
 </script>
 
-<script src="coffee/1.1.2/coffee-script.js"></script>
 </body>
 </html>
