add test for moment. test case failed, but it really works

--- a/test.html
+++ b/test.html
@@ -64,6 +64,7 @@
 
       'querystring': normalCheck('QueryString'),
       'underscore': normalCheck('_'),
+      'moment': normalCheck('moment'),
 
       'labjs': function(meta, LAB) {
         test.assert(global['$LAB'] === undefined, 'no global $LAB');
